src/test/ui/span/issue-23338-locals-die-before-temps-of-body.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/issue-23338-locals-die-before-temps-of-body.rs:20:5
   |
20 |     y.borrow().clone()
   |     ^ borrowed value does not live long enough
21 | }
   | - `y` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `y` does not live long enough
  --> $DIR/issue-23338-locals-die-before-temps-of-body.rs:27:9
   |
27 |         y.borrow().clone()
   |         ^ borrowed value does not live long enough
28 |     };
   |     -- borrowed value needs to live until here
   |     |
   |     `y` dropped here while still borrowed

error: aborting due to 2 previous errors

